Run ODF UI native E2E tests.
Signed-off-by: alfonsomthd <alfonsomthd@protonmail.com>

--- a/pytest.ini
+++ b/pytest.ini
@@ -15,6 +15,7 @@ markers =
     ecosystem: ecosystem team marker
     e2e: e2e team marker
     ocp: ocp related tests
+    odf_ui_native_e2e: ODF console native E2E tests
     rook: rook related tests
     ui: UI related tests
     csi: CSI related tests
